# domain-agent-server

./: .env.example  .gitignore  Dockerfile  README.md  backfill_captured_by.py  dev.sh  docker-compose.prod.yml  docker-compose.yml  domain_agent.db  harness-vs-agent.md  install.sh  pyproject.toml  setup_local.sh
nginx/: nginx.conf
src/domain_agent_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/server/: analyzer.py  auth.py  chunker.py  compressor.py  db.py  janitor.py  main.py  memory_store.py  reporter.py  retagger.py  token_tracker.py
src/server/templates/: admin.html  dashboard.html  member.html
tests/: conftest.py  test_capture_gate.py  test_chunker.py  test_cleanup_pipeline.py  test_consolidate_namespaces.py  test_janitor.py  test_narrative.py  test_normalize_tags.py  test_ontology_cards.py  test_retagger.py  test_session_attribution.py  test_translate_to_korean.py
