[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-agent-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "anthropic>=0.40",
    "openai>=1.50",
    "python-dotenv>=1.0",
    "bcrypt>=4.0",
    "pyjwt>=2.8",
    "apscheduler>=3.10",
]

[tool.setuptools.packages.find]
where = ["src"]
